# rust-template

./: .env  Cargo.toml  README.md  diesel.toml  docker-compose-mysql.yml  docker-compose.yml
docs/: postman_collection.json
migrations/2024-07-01-154006_items/: down.sql  up.sql
pgadmin4/: pgpass  servers.json
src/: api_responses.rs  bootstrap.rs  config.rs  database.rs  logging.rs  main.rs  routes.rs  schema.rs
src/controllers/: mod.rs
src/controllers/items/: delete.rs  get.rs  get_all.rs  mod.rs  post.rs  put.rs
src/controllers/items/dtos/: get_dtos.rs  mod.rs  post_dtos.rs  put_dtos.rs
src/health/: health_check.rs
src/models/: items.rs
src/repositories/: errors.rs  mod.rs
src/repositories/items/: dtos.rs  items_repository.rs  mod.rs
src/services/: errors.rs  mod.rs
src/services/items/: items_service.rs  mod.rs
