[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.1", features = ["postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
